force-app/main/default/objects/Account/fields/Break_After_Peroid__c.field-meta.xml
<CustomField>
    <fullName>Break_After_Peroid__c</fullName>
    <label>Break After Peroid</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>