force-app/main/default/objects/Account/fields/No_Of_Period__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Period__c</fullName>
    <label>Number Of Period</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>