force-app/main/default/objects/Account/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <formula>TEXT(YEAR(TODAY())) &amp; &quot; - &quot; &amp; TEXT(YEAR(TODAY()) + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session</label>
    <type>Text</type>
</CustomField>